Caption text overflow bug fixed

--- a/src/components/Post/Content/content.module.css
+++ b/src/components/Post/Content/content.module.css
@@ -28,3 +28,7 @@
 .username {
   font-weight: 600;
 }
+
+.postInfo {
+  overflow-wrap: break-word;
+}
